1.Updated planet speed to the correct km/day not km/h. 2.Added spaceship velocity setup and launch day setup.

--- a/EndorRouting/app/src/main/res/values/strings.xml
+++ b/EndorRouting/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="clear">Clear</string>
     <string name="delete_planet">Delete Planet</string>
     <string name="day">Day:</string>
+    <string name="label_ship_velocity">Ship velocity (km/day)</string>
+    <string name="label_launch_day">Launch day</string>
 </resources>
